# d1-doctor-app

./: .gitignore  .mf-role-test  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  package.json
.claude/: CLAUDE.md  settings.json
.claude/hooks/: lint-on-write.sh  pre-pr-gate.sh
.github/workflows/: ci.yml  release.yml  secrets-validation.yml
Formula/: d1.rb
crates/cli/: Cargo.toml
crates/cli/locales/: en.toml  zh-CN.toml
crates/cli/src/: auth.rs  auth_token.rs  cli.rs  credits.rs  daemon_client.rs  i18n.rs  lib.rs  main.rs  tui.rs  version_check.rs
crates/cli/src/chat/: connection.rs  display.rs  history.rs  input.rs  mod.rs
crates/cli/src/commands/: account.rs  config.rs  diagnose.rs  doctor.rs  files.rs  gateway.rs  gateway_keys.rs  gateway_setup.rs  install.rs  logs.rs  mod.rs  run.rs  start.rs  status.rs  stop.rs  tasks.rs
crates/cli/tests/: test_install.rs
crates/common/: Cargo.toml
crates/common/src/: chat_message.rs  config.rs  errors.rs  lib.rs  proto.rs  proto_gen.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: chat_relay.rs  cloud_ws.rs  command_relay.rs  config.rs  connection_state.rs  executor.rs  filesystem.rs  fingerprint.rs  health.rs  lib.rs  local_db.rs  main.rs  mcp_filesystem.rs  mcp_memory.rs  mcp_qmd.rs  mcp_registry.rs  mcp_shell.rs  mcp_system.rs  memory_store.rs  message_handler.rs  profile_detect.rs  protocol.rs  qmd.rs  redactor.rs  rest_api.rs  router.rs  security.rs  system_ops.rs  ws_app.rs  ws_client.rs  ws_server.rs
crates/daemon/tests/: protocol_test.rs  test_main.rs
crates/desktop/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts  wdio.conf.ts
crates/desktop/e2e/: app-launch.e2e.ts  connection-status.e2e.ts  sidebar.e2e.ts  tsconfig.json
crates/desktop/src/: App.vue  NinjaApp.vue  index.html  main.ts  ninja.html  ninja.ts  test-setup.ts
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/binaries/: .gitkeep
crates/desktop/src-tauri/capabilities/: default.json
crates/desktop/src-tauri/icons/: icon.icns
crates/desktop/src-tauri/src/: lib.rs  main.rs
crates/desktop/src-tauri/src/commands/: config.rs  daemon.rs  mod.rs  tasks.rs  window.rs
crates/desktop/src/__tests__/: App.test.ts
crates/desktop/src/constants/: bob.ts
crates/desktop/src/constants/__tests__/: bob.test.ts
crates/desktop/src/locales/: en.json  zh-CN.json
crates/desktop/src/modes/copilot/: CopilotHeader.vue  CopilotInput.vue  CopilotMode.vue  SessionBar.vue
crates/desktop/src/modes/copilot/__tests__/: copilot.test.ts
crates/desktop/src/modes/full/: ChatWorkspace.vue  FullMode.vue  Sidebar.vue  TitleBar.vue  UtilityPanel.vue
crates/desktop/src/modes/full/__tests__/: ChatWorkspace.test.ts  FullMode.test.ts  Sidebar.test.ts  TitleBar.test.ts  UtilityPanel.test.ts
crates/desktop/src/modes/ninja/: NinjaBar.vue  NinjaDropdown.vue  StepTimeline.vue
crates/desktop/src/modes/ninja/__tests__/: ninja.test.ts
crates/desktop/src/plugins/: i18n.ts
crates/desktop/src/plugins/__tests__/: i18n.test.ts
crates/desktop/src/shared/: types.ts
crates/desktop/src/shared/components/: AgentAvatar.vue  ConnectionStatus.vue  CreditBar.vue  KbdShortcut.vue  LoginScreen.vue  MessageBubble.vue  ModeBar.vue  ModeSwitcher.vue  PermissionBadge.vue  PlanCard.vue  ResultCard.vue  StepIndicator.vue  UpdateBanner.vue
crates/desktop/src/shared/components/__tests__/: AgentAvatar.test.ts  ConnectionStatus.test.ts  CreditBar.test.ts  KbdShortcut.test.ts  LoginScreen.test.ts  MessageBubble.test.ts  ModeBar.test.ts  ModeSwitcher.test.ts  PermissionBadge.test.ts  PlanCard.test.ts  ResultCard.test.ts  StepIndicator.test.ts  UpdateBanner.test.ts
crates/desktop/src/shared/composables/: useAgentEvents.ts  useAutoUpdater.ts  useConfig.ts  useDaemonConnection.ts
crates/desktop/src/shared/composables/__tests__/: useAgentEvents.test.ts  useAutoUpdater.test.ts  useDaemonConnection.test.ts
crates/desktop/src/shared/stores/: agent.ts  app.ts  auth.ts  conversation.ts  daemon.ts
crates/desktop/src/shared/stores/__tests__/: app.test.ts  auth.test.ts  conversation.test.ts  daemon.test.ts  stores.test.ts
crates/desktop/src/shared/styles/: a11y.css  animations.css  tokens.css
crates/desktop/src/types/: daemon.ts
crates/desktop/src/types/__tests__/: daemon.test.ts
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs  mcp_tools.rs  plugin_trait.rs  testing.rs
docs/: api-reference.md  architecture-overview.md  getting-started.md  mcp_servers.example.toml  plugin-development.md
docs/plans/: 2026-02-26-v2.4.0-mac-client-design.md  2026-02-26-v2.4.0-mac-client.md  2026-02-28-mode-switcher-and-real-features-design.md  2026-03-09-daemon-bridge-agent-wiring-design.md  2026-03-09-daemon-bridge-agent-wiring-plan.md  2026-03-12-design-system-optimization-design.md  2026-03-12-design-system-optimization-plan.md
e2e/: test_install_flow.sh
proto/: buf.yaml
proto/d1doctor/v1/: agent.proto  auth.proto  common.proto  credits.proto  messages.proto
scripts/: build.sh  dev.sh  install.sh  release-mac.sh  setup-local.sh  sync-proto.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/integration/: test-cli.sh
