[workspace]

[package]
name = "d1-doctor-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "d1_doctor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "d1-doctor-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
