[package]
name = "d1-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "d1"
path = "src/main.rs"

[dependencies]
d1-common = { path = "../common" }
clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = "0.28"
indicatif = "0.17"
colored = "2"
chrono = "0.4"
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
toml = "0.8"
futures-util = "0.3"
which = "4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
