[package]
name = "d1-doctor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
d1-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"

[dev-dependencies]
serde_json.workspace = true
