[package]
name = "d1-doctor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
d1-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
tokio-tungstenite.workspace = true
futures-util = "0.3"
chrono.workspace = true
uuid.workspace = true
toml.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
