[package]
name = "d1-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
base64.workspace = true
toml.workspace = true
dirs = "5.0"
prost.workspace = true
