[package]
name = "d1-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "d1_daemon"
path = "src/lib.rs"

[[bin]]
name = "d1-daemon"
path = "src/main.rs"

[dependencies]
d1-common.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prost.workspace = true

rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true

sysinfo.workspace = true

clap = { version = "4.4", features = ["derive", "cargo"] }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
