[package]
name = "d1-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "d1-daemon"
path = "src/main.rs"

[dependencies]
d1-common.workspace = true

tokio.workspace = true
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true

sysinfo.workspace = true

clap = { version = "4.4", features = ["derive", "cargo"] }
futures = "0.3"
futures-util = "0.3"
toml = "0.8"
dirs = "5"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"

[dev-dependencies]
tempfile = "3"
