[package]
name = "d1-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "d1-daemon"
path = "src/main.rs"

[dependencies]
d1-common = { path = "../common" }

tokio.workspace = true
tokio-tungstenite.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true

sysinfo.workspace = true
toml.workspace = true

clap = { version = "4.4", features = ["derive", "cargo"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
async-trait.workspace = true
axum = "0.7"
tower = "0.4"
sha2.workspace = true
hex.workspace = true
hostname.workspace = true
