[package]
name = "d1-doctor-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin SDK for Day 1 Doctor — build custom setup automation plugins"

[dependencies]
d1-common.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait = "0.1"
